examples/test/testpolicy7409.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7409
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key3: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value29
      podSelector:
        matchLabels:
          key3: value34
          key46: value35
          key17: value1
